feat/ add auth2#6